add links to code samples

--- a/src/templates/slides/eight.hbs
+++ b/src/templates/slides/eight.hbs
@@ -15,7 +15,7 @@
 		</div>
 
 		<div class="second inuit fragment" data-fragment-index="0">
-			<img src="{{ SP.DIR_IMAGES }}/eight-inuit.jpg" width="638" height="286">
+			<a href="https://github.com/csswizardry/inuit.css/blob/master/objects/_greybox.scss"><img src="{{ SP.DIR_IMAGES }}/eight-inuit.jpg" width="638" height="286"></a>
 		</div>
 	</div>
 
