--- a/src/templates/slides/two.hbs
+++ b/src/templates/slides/two.hbs
@@ -13,7 +13,7 @@
 
 	<br>
 	<div class="toolkit">
-		<img src="{{ SP.DIR_IMAGES }}/two-empty-params-toolkit.jpg" width="" height="">
+		<a href="https://github.com/Team-Sass/toolkit/blob/2.x.x/stylesheets/toolkit/_colors.scss"><img src="{{ SP.DIR_IMAGES }}/two-empty-params-toolkit.jpg" width="" height=""></a>
 	</div>
 
 	<aside class="notes">
@@ -28,7 +28,7 @@
 
 	<br>
 	<div class="toolkit">
-		<img src="{{ SP.DIR_IMAGES }}/two-null-toolkit.jpg" width="" height="">
+		<a href="https://github.com/Team-Sass/toolkit/blob/2.x.x/stylesheets/toolkit/_intrinsic-ratio.scss"><img src="{{ SP.DIR_IMAGES }}/two-null-toolkit.jpg" width="" height=""></a>
 	</div>
 
 	<aside class="notes">
@@ -43,7 +43,7 @@
 
 	<br>
 	<div class="compass">
-		<img src="{{ SP.DIR_IMAGES }}/two-idiot-compass.jpg" width="" height="">
+		<a href="https://github.com/chriseppstein/compass/blob/stable/frameworks/compass/stylesheets/compass/css3/_text-shadow.scss"><img src="{{ SP.DIR_IMAGES }}/two-idiot-compass.jpg" width="" height=""></a>
 	</div>
 
 	<aside class="notes">
