--- a/src/templates/slides/one.hbs
+++ b/src/templates/slides/one.hbs
@@ -23,7 +23,7 @@
 		</div>
 
 		<div class="second foundation fragment" data-fragment-index="1">
-			<img src="{{ SP.DIR_IMAGES }}/one-foundation.jpg" height="" width="800">
+			<a href="https://github.com/zurb/foundation/blob/master/scss/foundation.scss"><img src="{{ SP.DIR_IMAGES }}/one-foundation.jpg" height="" width="800"></a>
 		</div>
 	</div>
 
