add target blanks

--- a/src/templates/slides/five.hbs
+++ b/src/templates/slides/five.hbs
@@ -33,7 +33,7 @@
 
 <section>
 	<div class="bootstrap">
-		<a href="https://github.com/twbs/bootstrap-sass/blob/master/vendor/assets/stylesheets/bootstrap/_variables.scss"><img src="{{ SP.DIR_IMAGES }}/five-variables-bootstrap.jpg" width="" height=""></a>
+		<a target="_blank" href="https://github.com/twbs/bootstrap-sass/blob/master/vendor/assets/stylesheets/bootstrap/_variables.scss"><img src="{{ SP.DIR_IMAGES }}/five-variables-bootstrap.jpg" width="" height=""></a>
 	</div>
 
 	<aside class="notes">
@@ -45,7 +45,7 @@
 
 <section>
 	<div class="inuit">
-		<a href="https://github.com/csswizardry/inuit.css/blob/master/base/_forms.scss"><img src="{{ SP.DIR_IMAGES }}/five-forms-inuit.jpg" width="" height=""></a>
+		<a target="_blank" href="https://github.com/csswizardry/inuit.css/blob/master/base/_forms.scss"><img src="{{ SP.DIR_IMAGES }}/five-forms-inuit.jpg" width="" height=""></a>
 	</div>
 
 	<aside class="notes">
@@ -55,7 +55,7 @@
 
 <section>
 	<div class="inuit">
-		<a href="https://github.com/csswizardry/inuit.css/blob/master/generic/_mixins.scss"><img src="{{ SP.DIR_IMAGES }}/five-arrows-inuit.jpg" width="" height=""></a>
+		<a target="_blank" href="https://github.com/csswizardry/inuit.css/blob/master/generic/_mixins.scss"><img src="{{ SP.DIR_IMAGES }}/five-arrows-inuit.jpg" width="" height=""></a>
 	</div>
 
 	<aside class="notes">
