--- a/src/templates/slides/fourteen.hbs
+++ b/src/templates/slides/fourteen.hbs
@@ -10,10 +10,10 @@
 	<h1 class="fragment" data-fragment-index="0">Use a debug flag.</h1>
 
 	<div class="inuit">
-		<a href="https://github.com/csswizardry/inuit.css/blob/master/_defaults.scss"><img src="{{ SP.DIR_IMAGES }}/fourteen-debug-config-inuit.jpg" width="" height=""></a>
+		<a target="_blank" href="https://github.com/csswizardry/inuit.css/blob/master/_defaults.scss"><img src="{{ SP.DIR_IMAGES }}/fourteen-debug-config-inuit.jpg" width="" height=""></a>
 	</div>
 	<div class="inuit no-label">
-		<a href="https://github.com/csswizardry/inuit.css/blob/master/generic/_debug.scss"><img src="{{ SP.DIR_IMAGES }}/fourteen-debug-inuit.jpg" width="" height=""></a>
+		<a target="_blank" href="https://github.com/csswizardry/inuit.css/blob/master/generic/_debug.scss"><img src="{{ SP.DIR_IMAGES }}/fourteen-debug-inuit.jpg" width="" height=""></a>
 	</div>
 
 	<br>
