--- a/src/templates/slides/nineteen.hbs
+++ b/src/templates/slides/nineteen.hbs
@@ -16,7 +16,7 @@
 
 		<div class="second compass fragment" data-fragment-index="0">
 			<!--<div class="inuit">-->
-			<a href="https://github.com/chriseppstein/compass/blob/stable/frameworks/compass/stylesheets/compass/css3/_text-shadow.scss"><img src="{{ SP.DIR_IMAGES }}/nineteen-compass.jpg" height="" width="700"></a>
+			<a target="_blank" href="https://github.com/chriseppstein/compass/blob/stable/frameworks/compass/stylesheets/compass/css3/_text-shadow.scss"><img src="{{ SP.DIR_IMAGES }}/nineteen-compass.jpg" height="" width="700"></a>
 		</div>
 	</div>
 
