--- a/src/templates/slides/ten.hbs
+++ b/src/templates/slides/ten.hbs
@@ -9,7 +9,7 @@
 
 <section>
 	<div class="bourbon">
-		<a href="https://github.com/thoughtbot/bourbon/blob/master/dist/_bourbon.scss"><img src="{{ SP.DIR_IMAGES }}/ten-bourbon.jpg" width="" height=""></a>
+		<a target="_blank" href="https://github.com/thoughtbot/bourbon/blob/master/dist/_bourbon.scss"><img src="{{ SP.DIR_IMAGES }}/ten-bourbon.jpg" width="" height=""></a>
 	</div>
 
 	<aside class="notes">
@@ -31,7 +31,7 @@
 
 <section>
 	<div class="foundation">
-		<a href="https://github.com/zurb/foundation/blob/master/scss/foundation/components/_accordion.scss"><img src="{{ SP.DIR_IMAGES }}/ten-foundation.jpg" width="" height=""></a>
+		<a target="_blank" href="https://github.com/zurb/foundation/blob/master/scss/foundation/components/_accordion.scss"><img src="{{ SP.DIR_IMAGES }}/ten-foundation.jpg" width="" height=""></a>
 	</div>
 
 	<aside class="notes">
