--- a/src/templates/slides/twenty-two.hbs
+++ b/src/templates/slides/twenty-two.hbs
@@ -12,7 +12,7 @@
 
 	<div class="mine-and-theirs--diagonal">
 		<div class="first caffeinated">
-			<a href="https://github.com/caffeinatedlabs/codeblog/blob/master/assets/craftstrap.sass"><img src="{{ SP.DIR_IMAGES }}/twenty-two-caffeinatedlabs.jpg" height="" width="800"></a>
+			<a target="_blank" href="https://github.com/caffeinatedlabs/codeblog/blob/master/assets/craftstrap.sass"><img src="{{ SP.DIR_IMAGES }}/twenty-two-caffeinatedlabs.jpg" height="" width="800"></a>
 		</div>
 
 		<div class="second fragment" data-fragment-index="1">
