--- a/src/templates/slides/four.hbs
+++ b/src/templates/slides/four.hbs
@@ -33,17 +33,17 @@
 	<h1>Access the config object with getters and setters.</h1>
 	<br>
 	<div class="toolkit">
-		<a href="https://github.com/Team-Sass/toolkit/blob/2.x.x/stylesheets/toolkit/_settings.scss"><img src="{{ SP.DIR_IMAGES }}/four-2-config-item-toolkit.jpg" height="" width=""></a>
+		<a target="_blank" href="https://github.com/Team-Sass/toolkit/blob/2.x.x/stylesheets/toolkit/_settings.scss"><img src="{{ SP.DIR_IMAGES }}/four-2-config-item-toolkit.jpg" height="" width=""></a>
 	</div>
 	<br>
 	<br>
 	<div class="toolkit no-label">
-		<a href="https://github.com/Team-Sass/toolkit/blob/2.x.x/stylesheets/toolkit/_settings.scss"><img src="{{ SP.DIR_IMAGES }}/four-2-getters-toolkit.jpg" height="" width=""></a>
+		<a target="_blank" href="https://github.com/Team-Sass/toolkit/blob/2.x.x/stylesheets/toolkit/_settings.scss"><img src="{{ SP.DIR_IMAGES }}/four-2-getters-toolkit.jpg" height="" width=""></a>
 	</div>
 	<br>
 	<br>
 	<div class="toolkit no-label">
-		<a href="https://github.com/Team-Sass/toolkit/blob/2.x.x/stylesheets/toolkit/_settings.scss"><img src="{{ SP.DIR_IMAGES }}/four-2-use-getter-toolkit.jpg" height="" width=""></a>
+		<a target="_blank" href="https://github.com/Team-Sass/toolkit/blob/2.x.x/stylesheets/toolkit/_settings.scss"><img src="{{ SP.DIR_IMAGES }}/four-2-use-getter-toolkit.jpg" height="" width=""></a>
 	</div>
 
 	<aside class="notes">
