--- a/src/templates/slides/twenty-one.hbs
+++ b/src/templates/slides/twenty-one.hbs
@@ -2,7 +2,7 @@
 
 <address>
 	<p><a href="mailto:elise.chant@gmail.com">elise.chant@gmail.com</a></p>
-	<p><a href="http://twitter.com/elisechant">@elisechant</a></p>
+	<p><a target="_blank" href="http://twitter.com/elisechant">@elisechant</a></p>
 </address>
 
 
