--- a/src/templates/slides/splash.hbs
+++ b/src/templates/slides/splash.hbs
@@ -1,3 +1,5 @@
+<img src="{{ SP.DIR_IMAGES }}/10-things-ive-learned-from-sass-plugins-title-image.jpg" style="visibility: hidden;height:0;">
+
 <h1 class="jumbo-text"><small><span class="sol-yellow">10</span> Things I've <br>Learned from</small><br>Sass Plugins</h1>
 
 <!--<img src="{{ SP.DIR_IMAGES }}/compass-logo.png">-->
