--- a/src/templates/layouts/default.hbs
+++ b/src/templates/layouts/default.hbs
@@ -23,6 +23,11 @@
 	<script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
 	<script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
 	<![endif]-->
+
+	<meta property="og:image" content="{{ SP.DIR_IMAGES }}/10-things-ive-learned-from-sass-plugins-title-image.jpg">
+	<meta property="og:image:type" content="image/jpeg">
+	<meta property="og:image:width" content="1200">
+	<meta property="og:image:height" content="664">
 </head>
 <body>
 
